feat server: add different request handlers for form.yaml and parameters.yaml add file writing function
